--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <!-- font-awesome link -->
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <title>Personal Website</title>
 
@@ -199,6 +200,20 @@
     <a href="#home">
         <img src="" alt="">
     </a>
+
+    <footer>
+        <div class="foot">
+        <img src="./images/logo3.png" alt="logo">
+        <i class='bx bxl-facebook-square'></i>
+        <i class='bx bxl-twitter'></i>
+        <i class='bx bxl-tiktok' ></i>
+        <i class='bx bxl-instagram-alt' ></i>
+        
+        
+    </div>
+    </footer>
+
+
 
 
 
