Edited my footer

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
     <footer>
         <div class="foot">
         <img src="./images/logo3.png" alt="logo">
-        <i class='bx bxl-facebook-square'></i>
+        <i class='bx bxl-facebook-circle' ></i>
         <i class='bx bxl-twitter'></i>
         <i class='bx bxl-tiktok' ></i>
         <i class='bx bxl-instagram-alt' ></i>
@@ -212,10 +212,6 @@
         
     </div>
     </footer>
-
-
-
-
 
 
     <!-- JS link -->
