Modified my footer

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
         <img src="" alt="">
     </a>
 
-    <footer>
+    <!-- <footer>
         <div class="foot">
         <img src="./images/logo3.png" alt="logo">
 
@@ -214,6 +214,18 @@
         
         
     </div>
+    </footer> -->
+    <footer>
+        <div class="foot">
+            <img src="./images/logo3.png" alt="logo">
+
+            <i class='bx bxl-facebook-circle'></i>
+            <i class='bx bxl-twitter'></i>
+            <i class='bx bxl-tiktok'></i>
+            <i class='bx bxl-instagram-alt'></i>
+            <i class='bx bxl-linkedin-square'></i>
+            <i class='bx bxl-youtube'></i>
+        </div>
     </footer>
 
 
