Updated my html file

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="info">
                 <h3><span>Name:</span> Yegon </h3>
                 <h3><span>Proffesion:</span> Software Engineer </h3>
-                <h3><span>Skills:</span> Coding </h3>
+                <h3><span>Skills:</span> Coding, programming, Teamwork </h3>
                 <p>
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                     Facere cupiditate, natus dicta minus deleniti est optio in suscipit,
