I modified about me section

--- a/index.html
+++ b/index.html
@@ -50,11 +50,8 @@
         <h1 class="heading"><span>About</span>Me</h1>
         <div class="row">
             <div class="info">
-                <!-- <h3><span>Name:</span> Yegon </h3>
-                <h3><span>Proffesion:</span> Software Engineer </h3>
-                <h3><span>Skills:</span> Coding, programming, Teamwork </h3>-->
                 <p>
-                    I'm a dedicated software engineer with a passion for crafting
+                    I am a dedicated software engineer with a passion for crafting
                     efficient and impactful solutions. Over the years, I've honed
                     my skills in various programming languages and development frameworks,
                     adapting to the ever-evolving industry. My portfolio showcases
