--- a/index.html
+++ b/index.html
@@ -35,12 +35,11 @@
 
     <!-- Home Section -->
     <section class="home" id="home">
-        <h3>Hi There!</h3>
+        <h3>Hello There !</i></h3>
         <h1>I am <span>A Software Engineer</span></h1>
         <p>
-            I am a master of innovation, weaving lines of code into awe-inspiring wonders. Join me in crafting
-            extraordinary software applications that will leave the world spellbound. Let's conquer the realm of
-            technology together!
+            Behold, I am the sorcerer of software engineering, conjuring unparalleled innovations with my coding spells.
+            Together, we shall reshape reality and manifest digital wonders beyond imagination. Embrace the magic!
         </p>
     </section>
 
@@ -112,7 +111,6 @@
                     processes within an organization.
                 </p>
             </div>
-
             <div class="box">
                 <i class="fas fa-graduation-cap"></i>
                 <span>2016</span>
@@ -130,7 +128,6 @@
 
     <section class="portfolio" id="portfolio">
         <h1 class="heading"><span>My Projects</span></h1>
-
         <div class="box-container">
             <div class="box">
                 <img src="./images/image1.png" alt="">
@@ -156,13 +153,9 @@
     <!-- Contacts Section -->
 
     <section class="contact" id="contact">
-
         <h1 class="heading"><span>Contact Me</span></h1>
-
         <div class="row">
-
             <div class="content">
-
                 <div class="info">
                     <h3><i class="fas fa-envelope"></i>yegon@gmail.com</h3>
                     <h3><i class="fas fa-phone"></i>+254-123-456-789</h3>
@@ -173,9 +166,7 @@
                 <input type="text" placeholder="name" class="box">
                 <input type="text" placeholder="email" class="box">
                 <input type="text" placeholder="ideas" class="box">
-                <textarea name="" id="" cols="30" rows="10" class="box message" placeholder="message">
-
-                </textarea>
+                <textarea name="" id="" cols="30" rows="10" class="box message" placeholder="message"></textarea>
                 <button type="submit" class="btn"> Submit </i></button>
             </form>
         </div>
@@ -187,13 +178,11 @@
     <a href="#home">
         <img src="" alt="">
     </a>
-
-
+    <!-- Footer Section -->
     <footer>
         <div class="foot">
 
             <p>follow me : </p>
-
             <i class='bx bxl-facebook-circle'></i>
             <i class='bx bxl-twitter'></i>
             <i class='bx bxl-tiktok'></i>
